  Psex value. 
* The minimum spanning networks will now scale nodes by area instead of radius.
  This gives a more accurate picture of the differences between MLGs. See
  https://github.com/grunwaldlab/poppr/issues/154 for details.
* A legend for samples/node is now added to all minimum spanning networks. See
  https://github.com/grunwaldlab/poppr/issues/158 for details.
  
BUG FIX
-------

* An issue where data with sample names containing apostrophes could not be
  imported was fixed (Identified in 
  https://github.com/grunwaldlab/poppr/issues/156).
* a bug in `imsn()` where custom MLGs would result in an error was fixed. See
  https://github.com/grunwaldlab/poppr/issues/155 for details.
* a bug in `plot_poppr_msn()` where setting `scale.leg = FALSE` would result in a
  very small MSN plot was fixed.
  
DEPENDENCIES
------------

* The minimum version of igraph has been set to 1.0.0.

MISC
----

* The MSN is now plotted last in `plot_poppr_msn()` so additional legends can
  be added if necessary.

poppr 2.5.0
===========

ALGORITHMIC CHANGE
------------------

* Identified in https://github.com/grunwaldlab/poppr/issues/139, Bruvo's 
  distance will now consider all possible combinations of ordered alleles in the
  calculation under the genome addition and loss models for missing data. This
  will affect those who have polyploid data that contain more than one missing 
  allele at any genotype
  
  To facilitate comparison, the global option old.bruvo.model, has been created.
  By default it is set to FALSE, indicating that poppr should use the ordered 
  allele combinations. If the user wants to use the method considering unorderd 
  allele combinations, they can set options(old.bruvo.model = TRUE)
  
  It must be repeated that this does not affect haploid or diploid comparisons, 
  those that use the infinite alleles model, or those who do not have more than 
  one missing allele at any genotype.

DEPRECATION
-----------
